[FIX] title on mobile

--- a/src/components/SubHeaderPage/sub-header-page.sass
+++ b/src/components/SubHeaderPage/sub-header-page.sass
@@ -1,13 +1,15 @@
 @import '../../assets/styles/resolutions'
 
 .page-article
-  padding: 1.8rem 0
+  padding: 1.8rem
+  padding-left: 0
   display: flex
   justify-content: space-between
   align-items: center
 
   @include device(mobile)
     display: block
+    padding-right: 0
 
     .btn
       margin-top: 1rem
